<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_submenuxsjm" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/layout_notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="30.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/subment_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notestitle" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notestitle1" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notestitle2" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes1" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes2" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes3" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes4" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes5" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes6" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes7" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes8" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes9" android:singleLine="false" />
            <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/notes10" android:singleLine="false" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip">
                <Button android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="center" android:id="@id/noteaccept" android:background="@drawable/submenuspjz" android:layout_width="110.0dip" android:layout_height="40.0dip" android:text="@string/advance_setting_accept" android:layout_alignParentLeft="true" android:onClick="onClick" />
                <Button android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="center" android:id="@id/notenotaccept" android:background="@drawable/submenuspjz" android:layout_width="110.0dip" android:layout_height="40.0dip" android:text="@string/advance_setting_not_accept" android:layout_alignParentRight="true" android:onClick="onClick" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_sn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="30.0dip">
        <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/subment_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advance_setting_note" android:singleLine="false" />
        <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/advance_setting_sn" android:singleLine="false" />
        <EditText android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/isn" android:background="@mipmap/submenu3_input" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" />
        <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/advance_setting_auth_code" android:singleLine="false" />
        <EditText android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/auth_code" android:background="@mipmap/submenu3_input" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" android:maxLength="12" android:digits="0123456789abcdefABCDEF" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
            <Button android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="center" android:id="@id/snaccept" android:background="@drawable/submenuspjz" android:layout_width="110.0dip" android:layout_height="40.0dip" android:text="@string/advance_setting_accept" android:layout_alignParentLeft="true" android:onClick="onClick" />
            <Button android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="center" android:id="@id/snnotaccept" android:background="@drawable/submenuspjz" android:layout_width="110.0dip" android:layout_height="40.0dip" android:text="@string/advance_setting_not_accept" android:layout_alignParentRight="true" android:onClick="onClick" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>