<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_submenutlq" android:padding="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenugzh" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:layout_marginRight="10.0dip" android:text="@string/set_wcnumber" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenugzhdetail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/set_wcnumber1" android:layout_below="@id/submenugzh" />
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenusina" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/set_wbnumber" android:layout_below="@id/submenugzhdetail" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenusinadetail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/set_wbnumber1" android:layout_below="@id/submenusina" />
    <ImageView android:id="@id/submenutlqqq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:src="@mipmap/submenu12_qqicon" android:layout_below="@id/submenusinadetail" />
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_qqtlq" android:layout_toRightOf="@id/submenutlqqq" android:layout_alignTop="@id/submenutlqqq" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup1detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="371817535" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup1" />
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_qqtlq2" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup1detail" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup2detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="232354319" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup2" />
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_qqtlq3" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup2detail" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup3detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="214190703" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup3" />
    <TextView android:textSize="@dimen/submenu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_qqtlq4" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup3detail" />
    <TextView android:textSize="@dimen/submenu_txt_size_large" android:textColor="@color/detail_color" android:id="@id/submenutlqgroup4detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="122504510" android:layout_toRightOf="@id/submenutlqqq" android:layout_below="@id/submenutlqgroup4" />
</RelativeLayout>