<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_submenuqxsz" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/menu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenuqxszwj" android:background="@mipmap/submenu7_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/play_mode" android:layout_centerHorizontal="true" android:onClick="onClick" />
    <Button android:textSize="@dimen/menu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenuqxszqx" android:background="@mipmap/submenu7_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ride_mode" android:layout_below="@id/submenuqxszwj" android:layout_centerHorizontal="true" android:onClick="onClick" />
    <Button android:textSize="@dimen/menu_txt_size_medium" android:textColor="@color/detail_color" android:id="@id/submenuqxszxx" android:background="@mipmap/submenu7_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/study_mode" android:layout_below="@id/submenuqxszqx" android:layout_centerHorizontal="true" android:onClick="onClick" />
    <TextView android:textSize="@dimen/submenu_txt_size_small" android:textColor="@color/detail_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/help_qxsz_content" android:layout_below="@id/submenuqxszxx" android:layout_alignLeft="@id/submenuqxszxx" android:layout_alignRight="@id/submenuqxszxx" />
</RelativeLayout>