<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/menu_txt_size_medium" android:textColor="@color/detail_color" android:gravity="center_vertical" android:background="@mipmap/menu_title" android:paddingLeft="@dimen/menu_marginleft" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menudeviceserver" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/appwtfk" android:background="@drawable/menu_itembg" android:paddingLeft="@dimen/menu_marginleft" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/menu_icon_10" />
        <TextView android:textSize="@dimen/menu_txt_size_small" android:textColor="@color/detail_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/appwtfk" />
    </LinearLayout>
    <ImageView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@mipmap/menu_line" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/sms" android:background="@drawable/menu_itembg" android:paddingLeft="@dimen/menu_marginleft" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/menu_icon_11" />
        <TextView android:textSize="@dimen/menu_txt_size_small" android:textColor="@color/detail_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sms" />
    </LinearLayout>
    <ImageView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@mipmap/menu_line" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/zxdh" android:background="@drawable/menu_itembg" android:paddingLeft="@dimen/menu_marginleft" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/menu_icon_12" />
        <TextView android:textSize="@dimen/menu_txt_size_small" android:textColor="@color/detail_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zxdh" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@mipmap/menu_line" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/tlq" android:background="@drawable/menu_itembg" android:paddingLeft="@dimen/menu_marginleft" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/menu_icon_13" />
        <TextView android:textSize="@dimen/menu_txt_size_small" android:textColor="@color/detail_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tlq" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@mipmap/menu_line" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/wtfk" android:background="@drawable/menu_itembg" android:paddingLeft="@dimen/menu_marginleft" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/menu_icon_14" />
        <TextView android:textSize="@dimen/menu_txt_size_small" android:textColor="@color/detail_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wtfk" />
    </LinearLayout>
</LinearLayout>